--- a/lib/soccer_reflection_coach_web/components/layouts/root.html.heex
+++ b/lib/soccer_reflection_coach_web/components/layouts/root.html.heex
@@ -27,7 +27,9 @@
       })();
     </script>
   </head>
-  <body>
-    {@inner_content}
+  <body class="bg-gray-100 font-sans antialiased text-gray-900 min-h-screen flex flex-col overflow-hidden">
+    <div class="flex-1 flex flex-col">
+      {@inner_content}
+    </div>
   </body>
 </html>
