fix typo in daisyui class

--- a/lib/soccer_reflection_coach_web/live/coach_live.html.heex
+++ b/lib/soccer_reflection_coach_web/live/coach_live.html.heex
@@ -28,7 +28,7 @@
       </div>
     <% end %>
     <%= if @is_loading do %>
-      <div class="text-left badge bade-secondary bg-secondary text-secondary-content">
+      <div class="text-left badge badge-secondary bg-secondary text-secondary-content">
         <span class=" loading loading-dots loading-md"></span>
       </div>
     <% end %>
